Fix body content center alignment

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,10 @@ textarea {
 	height: 20vw;
 }
 
+.container {
+	margin:  auto;
+}
+
 .row {
 	padding-bottom: 3%;
 }
